--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -38,16 +38,35 @@
     margin-left: 150px;
 }
 
+.select{
+    border-radius: 10px;
+    /* margin-top: 10px; */
+    /* background-color: red; */
+    width: 220px;
+    margin-left: 37px;
+}
+.city{
+    color: grey;
+      font-size: 1.3em;
+    /* text-align: center; */
+    padding: 5px 0px;
+    margin: 0;
+    cursor:pointer;
+    transition: .2s;
+}
+.city:hover{
+    /* background-color: rgb(196, 164, 226); */
+    color:rgb(108, 23, 148)
+}
+
 .titleBanner{
-    font-size: 4em;
-    font-family: system-ui;
+    font-size: 3.7em;
     color: rgb(0, 0, 0);
     line-height: 0;
 }
 
 .subtitleBanner{
-    font-family: system-ui;
-    font-size: 1.25em;
+    font-size: 1em;
     color:grey;
     width: 500px;
     height: 125px;
@@ -61,10 +80,9 @@
     height: 40px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    font-family: system-ui;
-    border: 0;
+      border: 0;
     padding: 0px 15px;
-    font-size: 1.4em;
+    font-size: 1.2em;
 }
 
 .input:focus{
@@ -105,8 +123,139 @@
     background-color: blueviolet;
 }
 
+/* VIEW 2 */
+
 .view2{
     width: 100vw;
     height: 100vh;
-    background-color: palevioletred;
+}
+
+.why{
+    width: 100vw;
+    height: fit-content;
+    background-color: rgb(172, 108, 232);
+}
+.subtitleSmall{
+      text-align: center;
+    padding: 30px 0px;
+    color:white
+}
+.steps{
+    /* background-color: red; */
+    margin-left: 10vw;
+    width: 80vw;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0px;
+}
+.step{
+    background-color: white;
+    width: 20%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.iconStep{
+    color:rgb(108, 23, 148);
+    font-size: 2.5em;
+    margin-top: 15px;
+}
+.descriptionStep{
+      font-size: 0.95em;
+    color: rgb(97, 97, 97);
+    padding: 5px 25px;
+    text-justify:inter-word;
+}
+
+/* SUPPORT */
+.support{
+    width: 55px;
+    height: 55px;
+    border: 0;
+    border-radius: 10px;
+    position: fixed;
+    top: 88vh;
+    left: 93vw;
+    background-color: rgb(220, 182, 255);
+    color:rgb(108, 23, 148);
+    cursor:pointer;
+    transition: .2s;
+}
+
+.support:hover{
+    color: white;
+    background-color: blueviolet;
+}
+
+.iconSupport{
+    font-size: 1.9em;
+    font-weight: bold;
+    margin-top: 1px;
+}
+
+/* RECOMIENDAN */
+
+.title{
+      text-align: center;
+    font-size: 2.5em;
+}
+
+.reviews{
+    margin-top: -20px;
+    width: 100%;
+    height: 120px;
+    /* background-color: red; */
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.review{
+    width: 300px;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.246);
+}
+
+.imgUser{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: red;
+    padding: 20px;
+}
+
+.bannerView2{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+.titleView2{
+      font-size: 2.5em;
+}
+
+.subtitleView2{
+    color: rgb(99, 99, 99);
+      font-weight: 400;
+}
+
+.soyConductor{
+    border: 0;
+      font-size: 1.5em;
+    padding: 6px 30px;
+    border-radius: 2px;
+    background-color: rgb(220, 182, 255);
+    color:rgb(108, 23, 148);
+    cursor:pointer;
+}
+
+/* Footer */
+
+.footer{
+    margin-top: 100px;
+    background-color: rgb(114, 114, 114);
+    height: 20vh;
+    width: 100vw;
 }
