--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,6 +1,7 @@
 .nav{
     background-color: rgba(250, 250, 250, 0.878);
     position: fixed;
+    /* display: block; */
     width: 100vw;
     height: 10vh;
     margin:0;
