--- a/client/src/components/Travels/Travels.module.css
+++ b/client/src/components/Travels/Travels.module.css
@@ -1,6 +1,7 @@
 .view{
     background-color: rgb(242, 241, 241);
     width: 100vw;
-    height: 100vh;
+    padding-bottom: 125px;
+    height: fit-content;
     display: flex;
 }
