--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -107,6 +107,7 @@
     display: flex;
 }
 
+
 .buttonFind{
     height: 35px;
     width: 100px;
@@ -152,21 +153,39 @@
 }
 .step{
     background-color: white;
-    width: 20%;
+    width: 30%;
     height: 100%;
     border-radius: 10px;
 }
 
-.iconStep{
-    color:rgb(108, 23, 148);
-    font-size: 2.5em;
-    margin-top: 15px;
+.stepHeader{
+    display: flex;
+    align-items: center;
 }
+
+.iconStep{
+    width: 50px;
+    margin: 20px 30px;
+}
+
+.titleStep{
+    font-size: 1.2em;
+    width: 150px;
+    text-align: center;
+}
+
+.iconStepCar{
+    width: 60px;
+    margin: 15px 30px;
+}
+
 .descriptionStep{
       font-size: 0.95em;
     color: rgb(97, 97, 97);
-    padding: 5px 25px;
-    text-justify:inter-word;
+    width: 250px;
+    margin: 0px auto;
+    line-height: 23px;
+    /* background-color: red; */
 }
 
 /* SUPPORT */
