--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,27 @@ html {
     font-family: Poppins;
   }
   
+  /* Cambiar el ancho del scrollbar */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Cambiar el color de fondo del scrollbar */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+/* Cambiar el color del thumb (el deslizador del scrollbar) */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+/* Cambiar el color del thumb al estar en hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+
   /* Sections
      ========================================================================== */
   
